--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'org.web3j:core:4.1.0-android'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.karumi:dexter:6.0.0'
+    implementation 'gun0912.ted:tedpermission:2.2.2'
 }
