--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AutoPay">
+        <activity android:name=".send_ethers"></activity>
         <activity
             android:name=".profile"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".Home_Page"/>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Home_Page" />
         <activity android:name=".QR_Scanner" />
         <activity android:name=".ethereum" />
         <activity android:name=".Transactions_list" />
@@ -47,11 +47,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
