--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.karumi:dexter:6.0.0'
     implementation 'gun0912.ted:tedpermission:2.2.2'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.google.zxing:core:3.3.2'
 }
