--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.2.2'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
